<resources>
    <string name="app_name">Test Firebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beenlovememory">Been Love Memory</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember user</string>
    <string name="login">Login</string>
    <string name="resetPassword">Reset password</string>
    <string name="register">Register</string>
    <string name="pickdate">Pick date</string>
    <string name="memoryname">Memory name</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="addmemory">Add memory</string>
    <string name="updatememory">Update memory</string>
    <string name="horoscope_capricorn">Capricorn</string>
    <string name="horoscope_aquarius">Aquarius</string>
    <string name="horoscope_pisces">Pisces</string>
    <string name="horoscope_aries">Aries</string>
    <string name="horoscope_taurus">Taurus</string>
    <string name="horoscope_gemini">Gemini</string>
    <string name="horoscope_cancer">Cancer</string>
    <string name="horoscope_leo">Leo</string>
    <string name="horoscope_virgo">Virgo</string>
    <string name="horoscope_libra">Libra</string>
    <string name="horoscope_scorpio">Scorpio</string>
    <string name="horoscope_sagittarius">Sagittarius</string>
    <string name="been_love_together">Been Love Together</string>
    <string name="love_events">Love Events</string>
    <string name="eventname">Event name</string>
</resources>